--- a/index.html
+++ b/index.html
@@ -29,21 +29,24 @@
 </style>
 
 <body>
-    <div id="container">
-        <div id="row1">
-            <button></button>
-            <button></button>
-            <button></button>
-        </div>
-        <div id="row2">
-            <button></button>
-            <button></button>
-            <button></button>
-        </div>
-        <div id="row3">
-            <button></button>
-            <button></button>
-            <button></button>
+    <div class="background">
+
+        <div id="container">
+            <div id="row1">
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div id="row2">
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div id="row3">
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
         </div>
     </div>
 
